@@ -1,0 +1,64 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>Qtstalker: Bars - BARS</title>
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
+</head>
+<body>
+<h2><u>Bars - BARS<br>
+</u></h2>
+<h3><br>
+</h3>
+<h3>Description:</h3>
+Plots standard OHLC bars or Candles. There is also an optional 3 MA's
+that can be plotted over the Bars or Candles. To plot the MA's, set the
+period to 2 or greater or 1 to hide.<br>
+<br>
+<h3>Bar Parameters:</h3>
+<ul>
+  <li>Up Color - color used for 'up' bars</li>
+  <li>Down Color - color used for 'down' bars</li>
+  <li>Neutral Color - color used for 'neutral' bars<br>
+  </li>
+  <li>Label - text to identify the plot</li>
+</ul>
+<h3>Candle Parameters:</h3>
+<ul>
+  <li>Candle Color - color used for candles</li>
+  <li>Label - text to identify the plot</li>
+</ul>
+<br>
+Formula Reference:<br>
+<table style="text-align: left; width: 905px; height: 112px;" border="1"
+ cellpadding="2" cellspacing="2">
+  <tbody>
+    <tr>
+      <td style="vertical-align: top;">Syntax<br>
+      </td>
+      <td style="vertical-align: top;">BARS(TYPE)<br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">Function<br>
+      </td>
+      <td style="vertical-align: top;">Type is either Bar or Candle.<br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">Example<br>
+      </td>
+      <td style="vertical-align: top;">BARS(Bar) or BARS(Candle)<br>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br>
+<br>
+<a href="trix.html" target="_self"><img src="back.png" alt="Back"
+ border="0" height="32" width="32"></a>
+<a href="vol.html" target="_self"><img src="next.png" alt="Next"
+ border="0" height="32" width="32"></a><a href="toc.html"><img
+ src="home.png" alt="Home" border="0" height="32" width="32"></a>
+</body>
+</html>
