@@ -94,6 +94,8 @@
 </ol>
 <h3>Indicator Reference</h3>
 <ol>
+  <li><a href="bars.html">Bars - BARS<br>
+    </a></li>
   <li><a href="cus.html">Custom Indicator- CUS</a></li>
   <li><a href="therm.html">Elder's Market Thermometer - THERM</a></li>
   <li><a href="sz.html">Elder's Safezone Stop - SZ</a></li>
