@@ -183,6 +183,7 @@
 
 20060205: Added new MA types from TALIB.
 
+20060208: Fixed bug in CUS plugin that did not accept a non-input from BARS plugin. 
 
 
 
